3.1.0 (#1152)
* 3.1.0

* gammel flyway i test

* wiremock profile

* wiremock profile

* wiremock profile

* wiremock profile